# sia-tps

./: .gitignore  LICENSE.md  README.md
tp1/: .pre-commit-config.yaml  README.md  pyproject.toml
tp1/docs/: PPT.pptx
tp1/tests/: test_ladoA.py  test_ladoB.py  test_tp1.py
tp1/tests/ladoA/: test_ladoA.py
tp1/tests/ladoB/: __init__.py  config.json  test_crossover.py  test_everything.py
tp1/tp1/: algorithms.py  game.py  searchTreeNode.py  state.py  structure.py  utils.py
tp1/tp1/ladoA/: algorithms.py  game.py  heuristics.py  main.py  searchTreeNode.py  search_tree_node.py  state.py  structure.py
tp1/tp1/ladoB/: config.json  crossover.py  fitness.py  game.py  main.py  mutation.py  selection.py  structure.py
tp2/: .pre-commit-config.yaml  README.md  pyproject.toml
tp2/tests/: run_all.py  test_ej1.py  test_ej2.py  test_tp2.py
tp2/tp2/: datapartitioning.py  error_graph.py  grapher.py  initializer.py  loader.py  main.py  optimizer.py  perceptron.py  run_all_generic.py  tester.py  train.py  utils.py
tp2/tp2/ej1/: animation.py  config.json  data.json  errors.py  graph.py  main.py  plot_optimizer.py  run_all.py  wrapper.py
tp2/tp2/ej1/assets/: .gitignore
tp2/tp2/ej2/: animation.py  config.json  dataset2.csv  graph.py  main.py  main2.py  run_all.py  wrapper.py
tp2/tp2/ej3/: config.json  main.py
tp2/tp2/ej3/a/: config.json  data.json  main.py  plot_optimizer.py
tp2/tp2/ej3/b/: config.json  digitsformat.csv  main.py  noisy_digitsformat.csv  plot_optimizer.py
tp2/tp2/ej3/c/: animation.py  config.json  digitsformat.csv  graph.py  main.py  noisy_digitsformat-normal-fuerte.csv  noisy_digitsformat-normal-masfuerte.csv  noisy_digitsformat-normal.csv  noisy_digitsformat-uniform.csv  noisy_digitsformat.csv  plot_optimizer.py  plot_probability.py  wrapper.py
tp3/: .pre-commit-config.yaml  README.md  pyproject.toml
tp3/docs/: PPT.pptx
tp3/tests/: test_architectures.py  test_hyperparams.py  test_optimizers.py  test_tp3.py
tp3/tp3/: autoencoder.py  datapartitioning.py  den_autoencoder.py  denoising_autoencoder.py  error_graph.py  grapher.py  initializer.py  loader.py  noise.py  optimizer.py  perceptron.py  tester.py  transform.py  utils.py
tp3/tp3/ej1/: config.json  data.json  font.h  font_trans2.csv  fonts.csv  graph.py  grapher.py  main.py  other.csv  other.json  transform.py
tp3/tp3/ej1/a/: config.json  graph.py  graph_generator.py  graph_latent.py  main.py  optimize_arch.py  optimize_hp.py  predict.py  wrapper.py
tp3/tp3/ej1/b/: config.json  main.py
tp3/tp3/ej2/: kerasae.py  kerasvae.py
tp4/: README.md  pyproject.toml
tp4/tests/: test_tp4.py
