[tool.poetry]
name = "tp1"
version = "0.1.0"
description = "TP1 - SIA"
authors = [
    "Juan Martin Barmasch <slococo@itba.edu.ar>",
    "Ezequiel Bellver <slococo@itba.edu.ar>",
    "Salvador Castagnino <slococo@itba.edu.ar>",
    "Santiago Lo Coco <slococo@itba.edu.ar>",
    "Juan Negro <slococo@itba.edu.ar>"
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
