[tool.poetry]
name = "tp2"
version = "0.1.0"
description = "TP2 - SIA"
authors = [
    "Juan Martin Barmasch <jbarmasch@itba.edu.ar>",
    "Ezequiel Bellver <ebellver@itba.edu.ar>",
    "Salvador Castagnino <scastagnino@itba.edu.ar>",
    "Santiago Lo Coco <slococo@itba.edu.ar>",
    "Juan Manuel Negro <jnegro@itba.edu.ar>"
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
black = "^22.6.0"
numpy = "^1.23.2"
matplotlib = "^3.5.2"
pandas = "^1.5.0"

[tool.poetry.dev-dependencies]
matplotlib = "^3.5.2"
pytest = "^7.1"
pre-commit = "^2.20.0"

[tool.black]
line-length = 88
skip-string-normalization = false
multi_line_output = 3
workers = 1

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
